--- a/manifest.json
+++ b/manifest.json
@@ -12,18 +12,18 @@
     {
       "src": "public/assets/image/logo96.png",
       "sizes": "96x96",
-      "type": "image/jpg"
+      "type": "image/png"
     },
     {
       "src": "public/assets/image/logo144.png",
       "sizes": "144x144",
-      "type": "image/jpg",
+      "type": "image/png",
       "purpose": "maskable"
     },
     {
       "src": "public/assets/image/logo192.png",
       "sizes": "192x192",
-      "type": "image/jpg"
+      "type": "image/png"
     }
   ]
 }
