--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "PWA",
-  "name": "PWA Fepex",
+  "short_name": "V Fepex",
+  "name": "V Fepex",
   "description": "Exemplo de PWA apresentado na oficina da V FEPEX",
   "scope": "/",
   "background_color": "#FFF",
@@ -23,6 +23,11 @@
     {
       "src": "public/assets/image/logo192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "public/assets/image/logo.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
