--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "name": "V Fepex",
     "description": "Exemplo de PWA apresentado na oficina da V FEPEX",
     "scope": "/",
-    "background_color": "#fff",
-    "theme_color": "#022e43",
+    "background_color": "#1a237e",
+    "theme_color": "#ff6f00",
     "start_url": ".",
     "display": "standalone",
     "orientation": "portrait",
